Исправлен метод на чтение данных с файла #2